--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,15 @@ body {
   padding: 49px;
 }
 
+@media (max-width: 768px) {
+  .field {
+    grid-template-columns: repeat(3, 19vw);
+    grid-template-rows: repeat(3, 19vw);
+    gap: 3vw;
+    padding: 6vw;
+  }
+}
+
 .field__cell {
   cursor: pointer;
   border-radius: var(--br-s);
@@ -70,8 +79,20 @@ body {
   transition: box-shadow var(--animation-time) var(--animation-func);
 }
 
+@media (max-width: 768px) {
+  .field__cell {
+    box-shadow: 1.5vw 1.5vw 0px var(--text-color);
+  }
+}
+
 .field__cell:not(.field__cell--selected):hover {
   box-shadow: 5px 5px 0px var(--text-color);
+}
+
+@media (max-width: 768px) {
+  .field__cell:not(.field__cell--selected):hover {
+    box-shadow: 0.75vw 0.75vw 0px var(--text-color);
+  }
 }
 
 .field__cell::after {
@@ -81,7 +102,7 @@ body {
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 110px 110px;
+  background-size: 76.4% 76.4%;
   opacity: 0;
   transition: opacity var(--animation-time) var(--animation-func);
 }
@@ -93,6 +114,12 @@ body {
 .field__cell--selected {
   cursor: default;
   box-shadow: 5px 5px 0px var(--text-color);
+}
+
+@media (max-width: 768px) {
+  .field__cell--selected {
+    box-shadow: 0.75vw 0.75vw 0px var(--text-color);
+  }
 }
 
 .field__cell--selected::after {
@@ -118,6 +145,13 @@ body {
   height: 104px;
 }
 
+@media (max-width: 768px) {
+  .button {
+    font-size: 6vw;
+    height: 12vw;
+  }
+}
+
 .button--restart {
   gap: 15px;
   background-color: var(--text-color);
@@ -127,8 +161,8 @@ body {
 .button--restart::before {
   content: "";
   display: block;
-  width: 70px;
-  height: 70px;
+  height: 67.3%;
+  aspect-ratio: 1;
   background-image: url("./assets/restart.svg");
   background-position: center;
   background-repeat: no-repeat;
